Fixed style on mobile

--- a/wp-content/themes/BAC/css/style.css
+++ b/wp-content/themes/BAC/css/style.css
@@ -477,10 +477,6 @@ img {
     background-size: cover;
 }
 
-.home-top-banner .banner-content h1{
-    font-size: 38px
-}
-
 .dark-bg {
     position: absolute;
     width: 100%;
@@ -554,6 +550,11 @@ img {
 .banner-content h1 {
     font-size: 42px;
     margin: 0 0 25px;
+}
+
+
+.banner-content h1{
+    font-size: 38px
 }
 
 .banner-content .second-heading {
